--- a/flight/flightlisting.html
+++ b/flight/flightlisting.html
@@ -48,7 +48,7 @@
             <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
           <a
-            href="../hotel/hotelsearch.html"
+            href="../stay/searchstays.html"
             class="inline-flex nav-link stays-btn nav-booking-tab"
           >
             <img src="/assets/bed-icon.svg" alt="bed" />Find Stays
@@ -142,70 +142,7 @@
           <h1>Where are you flying?</h1>
         </div>
 
-        <!-- Flights Form -->
-        <div id="flightForm" class="booking-form booking-flight-form">
-          <div class="grid">
-            <div class="form-group">
-              <label>From - To</label>
-              <input
-                type="text"
-                id="fromToInput"
-                value="Lahore - Karachi"
-                placeholder="Lahore - Karachi"
-              />
-              <span class="fs-16 swap-icon">⇄</span>
-            </div>
-
-            <div class="form-group trip">
-              <label>Trip</label>
-              <select>
-                <option>Return</option>
-                <option>One Way</option>
-              </select>
-            </div>
-
-            <div class="return-depart">
-              <div class="form-group">
-                <label>Depart</label>
-                <div class="input-with-icon input-calendar">
-                  <input type="date" />
-                  <img
-                    src="/assets/calendar-icon.svg"
-                    alt="Calendar"
-                    class="input-icon-right input-calendar-icon"
-                  />
-                </div>
-              </div>
-
-              <div class="form-group">
-                <label>Return</label>
-                <div class="input-with-icon input-calendar">
-                  <input type="date" />
-                  <img
-                    src="/assets/calendar-icon.svg"
-                    alt="Calendar"
-                    class="input-icon-right input-calendar-icon"
-                  />
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label>Passenger - Class</label>
-              <input type="text" placeholder="1 Passenger, Economy" />
-            </div>
-          </div>
-        </div>
-
-        <!-- Flights Actions -->
-        <div class="actions flight-actions">
-          <button class="inline-flex btn-black flight-btn">
-            <img src="/assets/plus-icon.svg" alt="" />&nbsp;Add Promo Code
-          </button>
-          <button class="inline-flex btn-primary flight-btn">
-            <img src="/assets/show-icon.svg" alt="" />&nbsp;Show Flights
-          </button>
-        </div>
+        <div id="flight-content"></div>
       </div>
     </section>
 
@@ -313,263 +250,7 @@
             </div>
           </div>
 
-          <!-- Flights -->
-          <div class="flight-card">
-            <div class="flight-info">
-              <img
-                src="/assets/emirates-logo.svg"
-                alt="Emirates"
-                class="airline-logo"
-              />
-              <div class="flight-info-container">
-                <div class="rating-badge">
-                  <div class="rating-badge-ratings flex">
-                    <p class="fs-12 fw-medium">4.2</p>
-                    <h1 class="fs-12 fw-bold text-muted">Very Good</h1>
-                    <h2 class="fs-12 text-muted">54 reviews</h2>
-                  </div>
-                  <div class="price grid">
-                    <h2 class="fw-medium fs-14 text-neutral-grey">
-                      starting from
-                    </h2>
-                    <h1 class="fw-bold text-accent-slamon fs-24">$104</h1>
-                  </div>
-                </div>
-                <div class="grid">
-                  <div class="flight-times">
-                    <label><input type="checkbox" name="details" /></label>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">9:00 pm - 5:13pm</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">Emirates</p>
-                    </div>
-                    <p
-                      class="fs-14 fw-semi-bold text-neutral-grey flight-non-stop"
-                    >
-                      non stop
-                    </p>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">5h 13m</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">EWR-BNA</p>
-                    </div>
-                  </div>
-                  <div class="flight-times">
-                    <label><input type="checkbox" name="details" /></label>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">12:00 pm - 1:28pm</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">Emirates</p>
-                    </div>
-                    <p
-                      class="fs-14 fw-semi-bold text-neutral-grey flight-non-stop"
-                    >
-                      non stop
-                    </p>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">2h 28m</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">EWR-BNA</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="flight-actions">
-                  <button class="btn-stroke">
-                    <img src="/assets/heart-stroke-icon.svg" alt="" />
-                  </button>
-                  <button class="btn-primary full-width">View Deals</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="flight-card">
-            <div class="flight-info">
-              <img
-                src="/assets/flydubai-logo.svg"
-                alt="Emirates"
-                class="airline-logo"
-              />
-              <div class="flight-info-container">
-                <div class="rating-badge">
-                  <div class="rating-badge-ratings flex">
-                    <p class="fs-12 fw-medium">4.2</p>
-                    <h1 class="fs-12 fw-bold text-muted">Very Good</h1>
-                    <h2 class="fs-12 text-muted">54 reviews</h2>
-                  </div>
-                  <div class="price grid">
-                    <h2 class="fw-medium fs-14 text-neutral-grey">
-                      starting from
-                    </h2>
-                    <h1 class="fw-bold text-accent-slamon fs-24">$104</h1>
-                  </div>
-                </div>
-                <div class="grid">
-                  <div class="flight-times">
-                    <label><input type="checkbox" name="details" /></label>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">12:00 pm - 1:28pm</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">Fly Dubai</p>
-                    </div>
-                    <p
-                      class="fs-14 fw-semi-bold text-neutral-grey flight-non-stop"
-                    >
-                      non stop
-                    </p>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">2h 28m</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">EWR-BNA</p>
-                    </div>
-                  </div>
-                  <div class="flight-times">
-                    <label><input type="checkbox" name="details" /></label>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">9:00 pm - 5:13pm</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">Fly Dubai</p>
-                    </div>
-                    <p
-                      class="fs-14 fw-semi-bold text-neutral-grey flight-non-stop"
-                    >
-                      non stop
-                    </p>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">13h 5m</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">EWR-BNA</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="flight-actions">
-                  <button class="btn-stroke">
-                    <img src="/assets/heart-stroke-icon.svg" alt="" />
-                  </button>
-                  <button class="btn-primary full-width">View Deals</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="flight-card">
-            <div class="flight-info">
-              <img
-                src="/assets/qatar-logo.svg"
-                alt="Emirates"
-                class="airline-logo"
-              />
-              <div class="flight-info-container">
-                <div class="rating-badge">
-                  <div class="rating-badge-ratings flex">
-                    <p class="fs-12 fw-medium">4.2</p>
-                    <h1 class="fs-12 fw-bold text-muted">Very Good</h1>
-                    <h2 class="fs-12 text-muted">54 reviews</h2>
-                  </div>
-                  <div class="price grid">
-                    <h2 class="fw-medium fs-14 text-neutral-grey">
-                      starting from
-                    </h2>
-                    <h1 class="fw-bold text-accent-slamon fs-24">$104</h1>
-                  </div>
-                </div>
-                <div class="grid">
-                  <div class="flight-times">
-                    <label><input type="checkbox" name="details" /></label>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">12:00 pm - 1:28pm</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">Qatar</p>
-                    </div>
-                    <p
-                      class="fs-14 fw-semi-bold text-neutral-grey flight-non-stop"
-                    >
-                      non stop
-                    </p>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">2h 28m</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">EWR-BNA</p>
-                    </div>
-                  </div>
-                  <div class="flight-times">
-                    <label><input type="checkbox" name="details" /></label>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">9:00 pm - 5:13pm</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">Qatar</p>
-                    </div>
-                    <p
-                      class="fs-14 fw-semi-bold text-neutral-grey flight-non-stop"
-                    >
-                      non stop
-                    </p>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">9h 13m</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">EWR-BNA</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="flight-actions">
-                  <button class="btn-stroke">
-                    <img src="/assets/heart-stroke-icon.svg" alt="" />
-                  </button>
-                  <button class="btn-primary full-width">View Deals</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="flight-card">
-            <div class="flight-info">
-              <img
-                src="/assets/eithad-logo.svg"
-                alt="Emirates"
-                class="airline-logo"
-              />
-              <div class="flight-info-container">
-                <div class="rating-badge">
-                  <div class="rating-badge-ratings flex">
-                    <p class="fs-12 fw-medium">4.2</p>
-                    <h1 class="fs-12 fw-bold text-muted">Very Good</h1>
-                    <h2 class="fs-12 text-muted">54 reviews</h2>
-                  </div>
-                  <div class="price grid">
-                    <h2 class="fw-medium fs-14 text-neutral-grey">
-                      starting from
-                    </h2>
-                    <h1 class="fw-bold text-accent-slamon fs-24">$104</h1>
-                  </div>
-                </div>
-                <div class="grid">
-                  <div class="flight-times">
-                    <label><input type="checkbox" name="details" /></label>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">12:00 pm - 1:28pm</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">Eithad</p>
-                    </div>
-                    <p
-                      class="fs-14 fw-semi-bold text-neutral-grey flight-non-stop"
-                    >
-                      non stop
-                    </p>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">2h 28m</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">EWR-BNA</p>
-                    </div>
-                  </div>
-                  <div class="flight-times">
-                    <label><input type="checkbox" name="details" /></label>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">9:00 pm - 5:13pm</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">Eithad</p>
-                    </div>
-                    <p
-                      class="fs-14 fw-semi-bold text-neutral-grey flight-non-stop"
-                    >
-                      non stop
-                    </p>
-                    <div>
-                      <h1 class="fs-16 fw-semi-bold">2h 28m</h1>
-                      <p class="fs-14 text-neutral-grey fw-medium">EWR-BNA</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="flight-actions">
-                  <button class="btn-stroke">
-                    <img src="/assets/heart-stroke-icon.svg" alt="" />
-                  </button>
-                  <button class="btn-primary full-width">View Deals</button>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div id="flightCardContainer"></div>
 
           <!-- Show more -->
           <button class="btn-secondary full-width mt-2">
@@ -656,10 +337,6 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script
-      type="module"
-      src="/src/javascript/flight-page/flightsearch.js"
-    ></script>
     <script
       type="module"
       src="/src/javascript/flight-page/flightlisting.js"
