--- a/landing/index.html
+++ b/landing/index.html
@@ -71,7 +71,7 @@
           <a href="../auth/signup.html" class="nav-link nav-booking-account"
             ><span>Sign up</span></a
           >
-          <div class="nav-trigger mobile-toggle" id="hamburger">
+          <div class="mobile-toggle" id="hamburger">
             <img
               src="/assets/open-icon-white.svg"
               alt=""
@@ -171,98 +171,7 @@
         </div>
         <a href=""><button class="btn-stroke">See more places</button></a>
       </div>
-
-      <div class="flex places-card">
-        <div class="places-content flex">
-          <img src="/assets/istanbul.jpg" alt="istanbul" />
-          <div class="grid">
-            <p class="fw-semi-bold heading-normal-txt">Istanbul, Turkey</p>
-            <p class="fw-medium fs-14">
-              Flights&nbsp;&nbsp;•&nbsp;&nbsp;Hotels&nbsp;&nbsp;•&nbsp;&nbsp;Resorts
-            </p>
-          </div>
-        </div>
-
-        <div class="places-content flex">
-          <img src="/assets/sydney.jpg" alt="" />
-          <div class="grid">
-            <p class="fw-semi-bold heading-normal-txt">Sydney, Australia</p>
-            <p class="fw-medium fs-14">
-              Flights&nbsp;&nbsp;•&nbsp;&nbsp;Hotels&nbsp;&nbsp;•&nbsp;&nbsp;Resorts
-            </p>
-          </div>
-        </div>
-
-        <div class="places-content flex">
-          <img src="/assets/baku.jpg" alt="" />
-          <div class="grid">
-            <p class="fw-semi-bold heading-normal-txt">Baku, Azerbaijan</p>
-            <p class="fw-medium fs-14">
-              Flights&nbsp;&nbsp;•&nbsp;&nbsp;Hotels&nbsp;&nbsp;•&nbsp;&nbsp;Resorts
-            </p>
-          </div>
-        </div>
-
-        <div class="places-content flex">
-          <img src="/assets/maldives.jpg" alt="" />
-          <div class="grid">
-            <p class="fw-semi-bold heading-normal-txt">Malé, Maldives</p>
-            <p class="fw-medium fs-14">
-              Flights&nbsp;&nbsp;•&nbsp;&nbsp;Hotels&nbsp;&nbsp;•&nbsp;&nbsp;Resorts
-            </p>
-          </div>
-        </div>
-
-        <div class="places-content flex">
-          <img src="/assets/paris.jpg" alt="" />
-          <div class="grid">
-            <p class="fw-semi-bold heading-normal-txt">Paris, France</p>
-            <p class="fw-medium fs-14">
-              Flights&nbsp;&nbsp;•&nbsp;&nbsp;Hotels&nbsp;&nbsp;•&nbsp;&nbsp;Resorts
-            </p>
-          </div>
-        </div>
-
-        <div class="places-content flex">
-          <img src="/assets/new york.jpg" alt="" />
-          <div class="grid">
-            <p class="fw-semi-bold heading-normal-txt">New York, US</p>
-            <p class="fw-medium fs-14">
-              Flights&nbsp;&nbsp;•&nbsp;&nbsp;Hotels&nbsp;&nbsp;•&nbsp;&nbsp;Resorts
-            </p>
-          </div>
-        </div>
-
-        <div class="places-content flex">
-          <img src="/assets/london.jpg" alt="" />
-          <div class="grid">
-            <p class="fw-semi-bold heading-normal-txt">London, UK</p>
-            <p class="fw-medium fs-14">
-              Flights&nbsp;&nbsp;•&nbsp;&nbsp;Hotels&nbsp;&nbsp;•&nbsp;&nbsp;Resorts
-            </p>
-          </div>
-        </div>
-
-        <div class="places-content flex">
-          <img src="/assets/tokyo.jpg" alt="" />
-          <div class="grid">
-            <p class="fw-semi-bold heading-normal-txt">Tokyo, Japan</p>
-            <p class="fw-medium fs-14">
-              Flights&nbsp;&nbsp;•&nbsp;&nbsp;Hotels&nbsp;&nbsp;•&nbsp;&nbsp;Resorts
-            </p>
-          </div>
-        </div>
-
-        <div class="places-content flex">
-          <img src="/assets/dubai.jpg" alt="" />
-          <div class="grid">
-            <p class="fw-semi-bold heading-normal-txt">Dubai, UAE</p>
-            <p class="fw-medium fs-14">
-              Flights&nbsp;&nbsp;•&nbsp;&nbsp;Hotels&nbsp;&nbsp;•&nbsp;&nbsp;Resorts
-            </p>
-          </div>
-        </div>
-      </div>
+      <div class="flex places-card" id="placesCard"></div>
     </section>
 
     <!-- Banner Cards -->
@@ -309,212 +218,7 @@
       </div>
       <div class="slider-reviews-container">
         <div class="swiper reviews-swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="grid swiper-content">
-                <h1 class="fs-24 fw-bold">
-                  “A real sense of community, nurtured”
-                </h1>
-                <p class="fs-14 text-neutral-grey">
-                  Really appreciate the help and support from the staff during
-                  these tough times. Shout out to katie for
-                </p>
-                <button class="btn-black">View More</button>
-                <div class="star-icon">
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                </div>
-                <div>
-                  <h1 class="fs-14 fw-bold">Olga</h1>
-                  <h2 class="fs-12 fw-medium text-neutral-grey">
-                    Weave Studios &ndash; Kai Tak
-                  </h2>
-                  <div class="flex">
-                    <img src="/assets/google-icon.svg" alt="" /><span
-                      class="fs-12 fw-bold text-neutral-grey"
-                      >&nbsp;Google</span
-                    >
-                  </div>
-                </div>
-                <div class="swiper-content-img">
-                  <img src="/assets/review-banner-1.svg" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="grid swiper-content">
-                <h1 class="fs-24 fw-bold">
-                  “A real sense of community, nurtured”
-                </h1>
-                <p class="fs-14 text-neutral-grey">
-                  Really appreciate the help and support from the staff during
-                  these tough times. Shout out to katie for
-                </p>
-                <button class="btn-black">View More</button>
-                <div class="star-icon">
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                </div>
-                <div>
-                  <h1 class="fs-14 fw-bold">Olga</h1>
-                  <h2 class="fs-12 fw-medium text-neutral-grey">
-                    Weave Studios &ndash; Kai Tak
-                  </h2>
-                  <div class="flex">
-                    <img src="/assets/google-icon.svg" alt="" /><span
-                      class="fs-12 fw-bold text-neutral-grey"
-                      >&nbsp;Google</span
-                    >
-                  </div>
-                </div>
-                <div class="swiper-content-img">
-                  <img src="/assets/review-banner-2.svg" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="grid swiper-content">
-                <h1 class="fs-24 fw-bold">
-                  “A real sense of community, nurtured”
-                </h1>
-                <p class="fs-14 text-neutral-grey">
-                  Really appreciate the help and support from the staff during
-                  these tough times. Shout out to katie for
-                </p>
-                <button class="btn-black">View More</button>
-                <div class="star-icon">
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                </div>
-                <div>
-                  <h1 class="fs-14 fw-bold">Olga</h1>
-                  <h2 class="fs-12 fw-medium text-neutral-grey">
-                    Weave Studios &ndash; Kai Tak
-                  </h2>
-                  <div class="flex">
-                    <img src="/assets/google-icon.svg" alt="" /><span
-                      class="fs-12 fw-bold text-neutral-grey"
-                      >&nbsp;Google</span
-                    >
-                  </div>
-                </div>
-                <div class="swiper-content-img">
-                  <img src="/assets/review-banner-3.svg" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="grid swiper-content">
-                <h1 class="fs-24 fw-bold">
-                  “A real sense of community, nurtured”
-                </h1>
-                <p class="fs-14 text-neutral-grey">
-                  Really appreciate the help and support from the staff during
-                  these tough times. Shout out to katie for
-                </p>
-                <button class="btn-black">View More</button>
-                <div class="star-icon">
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                </div>
-                <div>
-                  <h1 class="fs-14 fw-bold">Olga</h1>
-                  <h2 class="fs-12 fw-medium text-neutral-grey">
-                    Weave Studios &ndash; Kai Tak
-                  </h2>
-                  <div class="flex">
-                    <img src="/assets/google-icon.svg" alt="" /><span
-                      class="fs-12 fw-bold text-neutral-grey"
-                      >&nbsp;Google</span
-                    >
-                  </div>
-                </div>
-                <div class="swiper-content-img">
-                  <img src="/assets/review-banner-1.svg" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="grid swiper-content">
-                <h1 class="fs-24 fw-bold">
-                  “A real sense of community, nurtured”
-                </h1>
-                <p class="fs-14 text-neutral-grey">
-                  Really appreciate the help and support from the staff during
-                  these tough times. Shout out to katie for
-                </p>
-                <button class="btn-black">View More</button>
-                <div class="star-icon">
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                </div>
-                <div>
-                  <h1 class="fs-14 fw-bold">Olga</h1>
-                  <h2 class="fs-12 fw-medium text-neutral-grey">
-                    Weave Studios &ndash; Kai Tak
-                  </h2>
-                  <div class="flex">
-                    <img src="/assets/google-icon.svg" alt="" /><span
-                      class="fs-12 fw-bold text-neutral-grey"
-                      >&nbsp;Google</span
-                    >
-                  </div>
-                </div>
-                <div class="swiper-content-img">
-                  <img src="/assets/review-banner-2.svg" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="grid swiper-content">
-                <h1 class="fs-24 fw-bold">
-                  “A real sense of community, nurtured”
-                </h1>
-                <p class="fs-14 text-neutral-grey">
-                  Really appreciate the help and support from the staff during
-                  these tough times. Shout out to katie for
-                </p>
-                <button class="btn-black">View More</button>
-                <div class="star-icon">
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                  <img src="/assets/star-icon.svg" alt="star" />
-                </div>
-                <div>
-                  <h1 class="fs-14 fw-bold">Olga</h1>
-                  <h2 class="fs-12 fw-medium text-neutral-grey">
-                    Weave Studios &ndash; Kai Tak
-                  </h2>
-                  <div class="flex">
-                    <img src="/assets/google-icon.svg" alt="" /><span
-                      class="fs-12 fw-bold text-neutral-grey"
-                      >&nbsp;Google</span
-                    >
-                  </div>
-                </div>
-                <div class="swiper-content-img">
-                  <img src="/assets/review-banner-3.svg" alt="" />
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="swiper-wrapper" id="swiperWrapper"></div>
         </div>
       </div>
     </section>
