--- a/stay/staysconfirmation.html
+++ b/stay/staysconfirmation.html
@@ -44,13 +44,13 @@
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
-            href="flightlisting.html"
+            href="../flight/flightsearch.html"
             class="inline-flex nav-link flights-btn nav-booking-tab"
           >
             <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
           <a
-            href="#"
+            href="../stay/stayslisting.html"
             class="inline-flex nav-link stays-btn nav-booking-tab active"
           >
             <img src="/assets/bed-icon.svg" alt="bed" />Find Stays
