--- a/stay/staysdetails.html
+++ b/stay/staysdetails.html
@@ -49,7 +49,7 @@
             <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
           <a
-            href="#"
+            href="../stay/stayslisting.html"
             class="inline-flex nav-link stays-btn nav-booking-tab active"
           >
             <img src="/assets/bed-icon.svg" alt="bed" />Find Stays
@@ -1021,14 +1021,6 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script
-      type="module"
-      src="/src/javascript/stay-page/searchstays.js"
-    ></script>
-    <script
-      type="module"
-      src="/src/javascript/stay-page/stayslisting.js"
-    ></script>
     <script
       type="module"
       src="/src/javascript/stay-page/staysdetails.js"
