--- a/flight/flightbookingdetails.html
+++ b/flight/flightbookingdetails.html
@@ -47,12 +47,15 @@
       <nav class="container">
         <div class="nav-left inline-flex">
           <a
-            href="flightlisting.html"
+            href="../flight/flightlisting.html"
             class="inline-flex nav-link flights-btn nav-booking-tab active"
           >
             <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
-          <a href="#" class="inline-flex nav-link stays-btn nav-booking-tab">
+          <a
+            href="../stay/searchstays.html"
+            class="inline-flex nav-link stays-btn nav-booking-tab"
+          >
             <img src="/assets/bed-icon.svg" alt="bed" />Find Stays
           </a>
         </div>
@@ -406,10 +409,6 @@
     <script
       type="module"
       src="/src/javascript/flight-page/flightdetails.js"
-    ></script>
-    <script
-      type="module"
-      src="/src/javascript/flight-page/flightlisting.js"
     ></script>
     <script type="module" src="/src/javascript/utils/swiper.js"></script>
   </body>
