--- a/stay/staysbookingdetails.html
+++ b/stay/staysbookingdetails.html
@@ -50,7 +50,7 @@
             <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
           <a
-            href="#"
+            href="../stay/stayslisting.html"
             class="inline-flex nav-link stays-btn nav-booking-tab active"
           >
             <img src="/assets/bed-icon.svg" alt="bed" />Find Stays
@@ -412,15 +412,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script
       type="module"
-      src="/src/javascript/stay-page/searchstays.js"
-    ></script>
-    <script
-      type="module"
       src="/src/javascript/stay-page/staysdetails.js"
-    ></script>
-    <script
-      type="module"
-      src="/src/javascript/stay-page/stayslisting.js"
     ></script>
     <script type="module" src="/src/javascript/utils/swiper.js"></script>
   </body>
